applications/nginx-6379439/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-6379439
  namespace: nginxnat

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-6379439

  template:
    metadata:
      labels:
        app: nginx-6379439

    spec:
      containers:
      - name: nginx-6379439
        image: nginx:latest

        ports:
        - containerPort: 80
