applications/nginx-6379439/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-6379439
  namespace: nginxnat

spec:
  selector:
    app: nginx-6379439

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
