applications/nginx-6379439/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-6379439
  namespace: nginxnat

spec:
  ingressClassName: traefik

  rules:
  - host: nginx-6379439.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: nginx-6379439

            port:
              number: 80
